--- a/src/app/tests/[sheet]/components/inflection-answer-entry/inflection-answer.entry.module.css
+++ b/src/app/tests/[sheet]/components/inflection-answer-entry/inflection-answer.entry.module.css
@@ -11,4 +11,5 @@
 .answerentry {
     font-size: inherit;
     font-family: inherit;
+    width: 150px;
 }
